<resources>
    <string name="app_name">MovieRating</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_main">Movie Rating</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="SIGN_UP">SIGN UP</string>
    <string name="OR_SKIP">OR SKIP</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="PASSWORD_AGAIN">PASSWORD AGAIN</string>
    <string name="please_enter_new_password">Please enter your new password</string>
    <string name="FORGOT_PASSWORD">FORGOT PASSWORD?</string>
    <string name="CANCEL">CANCEL</string>
    <string name="SUBMIT">SUBMIT</string>
    <string name="please_enter_email">Please enter your email so we can send you link to reset password</string>
    <string name="wrong_email">Wrong email or password</string>
    <string name="Unknown_error">Unknown error</string>
    <string name="password_invalid">Your password must contains Uppercase character, special character and at lest 6 letters. </string>
    <string name="email_invalid">Your email is invalid.Please input correct email. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missing_email_password">You must enter email and password.</string>
    <string name="missing_email">You must enter email.</string>
    <string name="network_failed">Please check your internet connection.</string>
    <string name="account_existed">This account existed. Please choose other account.</string>
    <string name="reset_password_email_sent">An email has been sent to your email to reset password.</string>
    <string name="POPULAR">POPULAR</string>
    <string name="MY_FAV">MY FAV</string>
    <string name="MOST_RATED">MOST RATED</string>
    <string name="DETAILS">DETAILS</string>
    <string name="REVIEWS">REVIEWS</string>
    <string name="lorem">Lorem ipsum dolor sit amet. Malis apeirian electram in qui. Porro harum vituperatoribus eam in, eum prima malorum dignissim ne. Eum ad brute postea corrumpit, modo sonet id eam, vide sanctus an eam. Detraxit tractatos te est, vel commodo appetere adipiscing ad. </string>
    <string name="trailer">Trailers</string>
    <string name="Read_more">Read more</string>
    <string name="Loading">Loading, please wait...</string>
    <string name="Hide">Hide</string>
    <string name="Logout">Logging out...</string>
</resources>
