<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/gray_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SIGN_IN" />

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/gray_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:text="@string/SIGN_UP" />
        </LinearLayout>

        <TextView
            style="@style/default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/OR_SKIP"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>